--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@vercel/functions": "^3.3.6",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
