--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@types/leaflet": "^1.9.21",
     "@vercel/functions": "^3.3.6",
     "dotenv": "^17.2.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "prisma": "^5.20.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
